[package]
name = "api"
version = "0.1.0"
authors = ["Merlintor <merlinfuchs2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "1.1.1"
rustls = "0.18"
actix-service = "1"
futures = "0.3"