[package]
name = "gateway"
version = "0.1.0"
authors = ["Merlintor <merlinfuchs2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.2.14"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
twilight-gateway = "0.2"
twilight-model = "0.2"
twilight-http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"